# SAAS_Pegasus

./: .env.example  .gitignore  README.md  manage.py  package.json  pegasus-config.yaml  pyproject.toml  webpack.config.js
.github/workflows/: backend.yml  front_end.yml
apps/ecommerce/: models.py  views.py  webhooks.py
apps/ecommerce/management/commands/: bootstrap_ecommerce.py
apps/subscriptions/: helpers.py  webhooks.py
apps/subscriptions/views/: checkout_views.py  views.py
apps/teams/: models.py
apps/teams/migrations/: 0003_team_billing_details_last_changed_team_customer_and_more.py
apps/users/: forms.py  models.py
apps/users/migrations/: 0002_customuser_customer_customuser_language_and_more.py
apps/web/: meta.py
frontend/: index.html
static/css/: site-base.css  site-tailwind.css
static/js/: app-bundle.js  chat-bundle.js  edit-team-bundle.js  pegasus-bundle.js  site-bundle.js  teams-bundle.js  vue-object-lifecycle-bundle.js
templates/web/components/: app_nav_menu_items.html
time_sheet_saas/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
